--- a/InTheBoks.Web/Content/Site.css
+++ b/InTheBoks.Web/Content/Site.css
@@ -285,6 +285,7 @@ header {
 footer {
     width: 100%;
     height: 22px;
+    height: 0px;
     clear: both;
     background-color: rgba(69, 69, 69, 0.44);
 }
@@ -472,13 +473,22 @@ button {
 .search {
     width: 100%;
     display: none;
-    overflow: auto;
     background-color: rgba(61, 61, 61, 0.7);
+    
+}
+
+.backButton {
+    
+  float: left;
+  margin-left: 20px;
+  margin-top: 20px;
+    
 }
 
     #searchContent {
-        margin: 20px;
         margin-left: 90px;
+        overflow: auto;
+        
         /*min-width: 450px;
         max-width: 650px;
         margin-left: auto;
@@ -487,9 +497,12 @@ button {
 
     #searchTasks {
         background-color: black;
-        padding: 20px;
+        height: 100px;
     }
 
+        #searchTasks div div {
+            text-align: center;
+    }
 
 /* Styles for basic forms
 -----------------------------------------------------------*/
