--- a/InTheBoks.Web/Content/Site.css
+++ b/InTheBoks.Web/Content/Site.css
@@ -27,6 +27,15 @@ body {
     user-select: none;
 }
 
+input {
+    -webkit-user-select: text;
+    -khtml-user-select: text;
+    -moz-user-select: text;
+    -ms-user-select: text; 
+    -o-user-select: text;
+    user-select: text;
+}
+
 /*p {
     -webkit-user-select: text;
     -khtml-user-select: text;
@@ -122,13 +131,19 @@ div.wrapper {
     float: left; /* important */
     position: relative; /* important(so we can absolutely position the description div */
     margin-right: 3px;
-    border: 4px solid transparent;
+    margin-bottom: 3px;
+    border: 3px solid transparent;
+    overflow: hidden;
 }
 
+input {
+    font-size: 1.5em;
+    line-height: 2em;
+}
 
 input[type='search'] {
     color: white;
-     background-color: rgba(52, 52, 52, 0.42);
+    background-color: rgba(52, 52, 52, 0.42);
 }
 
 ::-webkit-input-placeholder {
@@ -148,7 +163,7 @@ input[type='search'] {
 
 
 div.selection {
-    border: 4px solid white;
+    border: 3px solid white;
     border-top-right-radius: 8px;
 }
 
@@ -474,34 +489,36 @@ button {
     width: 100%;
     display: none;
     background-color: rgba(61, 61, 61, 0.7);
-    
 }
 
 .backButton {
-    
-  float: left;
-  margin-left: 20px;
-  margin-top: 20px;
-    
+    float: left;
+    margin-left: 20px;
+    margin-top: 20px;
 }
 
-    #searchContent {
-        margin-left: 90px;
-        overflow: auto;
-        
-        /*min-width: 450px;
+.backButtonProperties {
+    /*margin-top: 6px;
+    margin-left: 20px;*/
+    display: inline-block;
+}
+
+#searchContent {
+    margin-left: 90px;
+    overflow: auto;
+    /*min-width: 450px;
         max-width: 650px;
         margin-left: auto;
         margin-right: auto;*/
-    }
+}
 
-    #searchTasks {
-        background-color: black;
-        height: 100px;
-    }
+#searchTasks {
+    background-color: black;
+    height: 100px;
+}
 
-        #searchTasks div div {
-            text-align: center;
+    #searchTasks div div {
+        text-align: center;
     }
 
 /* Styles for basic forms
@@ -561,4 +578,56 @@ textarea {
 .picked {
     border: 3px solid white !important;
     opacity: 0.4;
+}
+
+/*#propertiesDialog, #propertiesHeader, #propertiesBody {
+    width: 300px;
+}*/
+
+/*#propertiesDialog {
+    z-index: 10000;
+    background-color: white;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    bottom: 0px;
+    color: gray;
+}
+
+
+
+    #propertiesHeader img {
+        margin: 0px;
+    }
+
+#propertiesBody {
+    border: 1px solid red;
+}*/
+
+/*#propertiesDialog {
+    position: absolute; 
+    top: 0px; 
+    right: 0px; 
+    bottom: 0px; 
+    background-color: white; 
+    color: black; 
+    width: 300px;
+}
+
+    #propertiesDialog > div {
+        margin: 0px 30px 0px 30px;
+    }*/
+
+#propertiesHeader {
+    /*height: 80px;
+    background-color: gray;
+    line-height: 4em;*/
+    
+    height: 80px;
+    background-color: gray;
+    color: white;
+    font-size: 1.2em;
+    border: 1px solid red;
+    width: 100%;
+    
 }
