--- a/InTheBoks.Web/Views/Home/Index.cshtml
+++ b/InTheBoks.Web/Views/Home/Index.cshtml
@@ -76,7 +76,7 @@
             ko.applyBindings(mainVM, document.getElementById("AppContainer"));
         }
 
-        mainVM.LoadCatalogs();
+        mainVM.LoadData();
     }
 
 </script>
